# internal/module/auth/request/login.go
@@ -1,6 +1,6 @@
 package request
 
 type Login struct {
-	Username string `json:"username"`
-	Password string `json:"password"`
+	Username string `json:"username" example:"username" validate:"required"`
+	Password string `json:"password" example:"password" validate:"required"`
 }
